hphp/hack/test/typecheck/reactive/parse_multiple7.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__RxShallow, __RxLocal>>
function f(): void {}
